delete old files and folders of user package #39
